--- a/GameForDellizo/index.html
+++ b/GameForDellizo/index.html
@@ -123,7 +123,7 @@
       } else {
         saveFailedLogin(name, gmail, contact, loginTime); // Save contact info on failed login
         alert("Invalid Gmail ID. Redirecting to question page...");
-        window.location.href = "question.html"; // Redirect on failed login
+        window.location.href = "/question.html"; // Redirect on failed login
       }
     });
 
